@@ -14,7 +14,7 @@ meshfact=0.5;
 Hlayer=0.0007/(P/Rgas/T)/2;
 H=0.1;
 L=1.0;
-CFLmax=2.0;
+CFLmax=1.0;
 
   is=1;  js=1; jm=round(60*meshfact);
   ie=round(81*meshfact); je=round(101*meshfact);
@@ -104,7 +104,7 @@ Init(
 
 Disc(
   NavierStokesPerfect(
-    zetaA1=0.2e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA1=0.0e0;    {conditions the eigenvalue of the A jacobian}
     zetaA2=0.5e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   FDSplus(
@@ -121,7 +121,10 @@ Disc(
     AOWENO_gammalo=0.85;
     AOWENO_gammahi=0.85;
     INTERPOL=INTERPOL_TVD2_VANLEER;
-    EIGENVALCOND=EIGENVALCOND_PECLET;
+    EIGENVALCOND=EIGENVALCOND_PARENT;
+    POSFILTER=POSFILTER_PARENT;
+    POSFILTER_numiter=4;
+    FACEINTEG=FACEINTEG_CENTRAL1;
   );
   MUSCLplus(
     FLUX=FLUX_FDSplusMultiD;
@@ -157,15 +160,13 @@ Cycle(
   Multizone(
     tmax=15e-4;   {simulation time span in seconds}
     dt=tmax/500;  {physical time step in seconds}
-    sigma1=0.2;      {exponent of largest pseudotime step in all dimensions}
-    sigma2=0.4;      {exponent of largest pseudotime step in all flux components}
-    PRECONDITIONER=PRECON_LOCALEIGENVALUE;
-    if (time==0,
-      CFL=0.02;
-    if (iter>2, CFL=0.2; );
-     ,{else}
-      CFL=1.0;
+    sigma1=0.5;      {exponent of largest pseudotime step in all dimensions}
+    sigma2=0.0;      {exponent of largest pseudotime step in all flux components}
+    PRECONDITIONER=PRECON_LOCALTIMESTEP;
+    if (iter==1,
+      CFL=0.001;
     );
+    CFL=min(CFL*1.01,1.0);
     phi1=20;     {maximum number of gridlines per zone in each dimension}
     UpdateFluid(CFL,PRECONDITIONER,sigma1,sigma2,phi1,dt);
 
@@ -236,17 +237,14 @@ Cycle(
       WriteDataFile();
     );
     sigma1=0.5;      {exponent of largest pseudotime step in all dimensions}
-    sigma2=0.5;      {exponent of largest pseudotime step in all flux components}
+    sigma2=0.0;      {exponent of largest pseudotime step in all flux components}
     PRECONDITIONER=PRECON_LOCALTIMESTEP;
     if (iter==1,
-      CFL=0.001;
+      CFL=0.01;
     );
-    CFL=min(CFL*1.03,CFLmax);
+    CFL=min(CFL*1.01,CFLmax);
     phi1=20;     {maximum number of gridlines per zone in each dimension}
     UpdateFluid(CFL,PRECONDITIONER,sigma1,sigma2,phi1);
-    if (iter==300 && FALSE,
-      Cycle(NavierStokesPerfect(PRECONDITIONER=PRECON_LOCALEIGENVALUE;););
-    );
     printf("%6.2f %6ld %9.3f   %E (%4ld,%4ld) %3ld/%3ld%s \n",
            CFL,iter,effiter_U,ximax,i_ximax,
            j_ximax,numzones_updated,numzones_total,clipinfo);
