@@ -22,7 +22,7 @@ rho1=P1/(R*T1);
 Re=1e5;
 L=2*eta*Re/rho1/q1;
 
-CFLmax=1.0;
+CFLmax=0.4;
 
 H=L*0.23;
 Hbdry=L*0.3/40;
@@ -120,14 +120,14 @@ Disc(
   );
   MUSCL(
     FLUX=FLUX_FDS;
-    AVERAGING=AVERAGING_ROE;
+    AVERAGING=AVERAGING_ARITH;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.9999;
-    INTERPOL=INTERPOL_AOWENO7;
-    EIGENVALCOND=EIGENVALCOND_PASCAL;
+    AOWENO_gammahi=0.95;
+    INTERPOL=INTERPOL_AOWENO5;
+    EIGENVALCOND=EIGENVALCOND_PARENT;
     POSFILTER=POSFILTER_PARENT;
-    POSFILTER_numiter=4;
+    POSFILTER_numiter=3;
     FACEINTEG=FACEINTEG_CENTRAL1;
   );
   MUSCLplus(
@@ -174,8 +174,8 @@ Cycle(
     if (mod(iter,50)==0,
       WriteDataFile(outputfilename);
     );
-    sigma1=0.5;      {exponent of largest pseudotime step in all dimensions}
-    sigma2=0.0;      {exponent of largest pseudotime step in all flux components}
+    sigma1=0.3;      {exponent of largest pseudotime step in all dimensions}
+    sigma2=0.3;      {exponent of largest pseudotime step in all flux components}
     PRECONDITIONER=PRECON_LOCALTIMESTEP;
     if (iter==1,
       CFL=0.01;
