@@ -158,7 +158,7 @@ Disc(
     AOWENO_gammahi=0.95;
     INTERPOL=INTERPOL_AOWENO5;
     FACEINTEG=FACEINTEG_CENTRAL1;
-    EIGENVALCOND=EIGENVALCOND_PASCAL;
+    EIGENVALCOND=EIGENVALCOND_PARENT;
     POSFILTER=POSFILTER_PARENT;
     POSFILTER_numiter=4;
   );
