@@ -7,6 +7,11 @@ CFDWARP CHANGELOG
 _____________________________________________________________________________________________________
 
 
+2019 FEB 12a
+   * in model/share/fluid_share.c
+     - added condition_Lambda_plus_minus_Parent2()
+
+
 2019 FEB 11a
    * in cycle/resconv/_MUSCL+/resconv.hh and cycle/resconv/_MUSCL/resconv.hh
      - changed PARENT [parent2018a] to PASCAL [parent2018a]
